<resources>
    <string name="app_name">Book Store</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="profile">Profile</string>
    <string name="book_store">Book Store</string>
    <string name="_7_habits_of_highly_effective_people">7 habits of highly effective people</string>
    <string name="_20">20 $</string>
    <string name="see_all">See all</string>
    <string name="books">Featured</string>
    <string name="the_name_of_the_wind">The Name of the Wind</string>
    <string name="john_doe">John Doe</string>
    <string name="_15_00">$ 15.00</string>
    <string name="phto">phto</string>
    <string name="image">image</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="signup">Sign Up</string>
    <string name="lo_g_out">lo g_out</string>
    <string name="log_out">log_out</string>
    <string name="data_structures_and_algorithms">data_structures_and_algorithms</string>
    <string name="_14_00_usd">_14_00_usd</string>
    <string name="free">free</string>
    <string name="open">open</string>
    <string name="splash" />
    <string name="place_order">place_order</string>
    <string name="book_information">book_information</string>
    <string name="book_details">book_details</string>
    <string name="author_information">author_information</string>
    <string name="featured">featured</string>
    <string name="my_books">my_books</string>
</resources>
