<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ViewModel"
            type="com.omaressam.bookstore.BooksDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".BookDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/back_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/book_details"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/back_imageView"
                app:layout_constraintStart_toEndOf="@id/back_imageView"
                app:layout_constraintTop_toTopOf="@id/back_imageView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/book_cardView"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_textView">

                <ImageView
                    android:id="@+id/book_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/book_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@{ViewModel.book.name}"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_cardView" />

            <View
                android:id="@+id/view_line"
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorGray"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_name_textView" />

            <TextView
                android:id="@+id/book_authorName_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="end"
                android:text="@{ViewModel.book.author}"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/view_line"
                app:layout_constraintEnd_toStartOf="@id/view_line"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="@id/view_line" />

            <TextView
                android:id="@+id/book_price_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="start"
                android:text="@{String.valueOf(ViewModel.book.price)}"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/view_line"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/view_line"
                app:layout_constraintTop_toTopOf="@id/view_line" />

            <RatingBar
                android:id="@+id/book_ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:rating="@{ViewModel.book.rating}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/view_line" />

            <View
                android:id="@+id/view_line_1"
                android:layout_width="3dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_ratingBar" />

            <TextView
                android:id="@+id/book_infoTitle_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/book_information"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/view_line_1"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/view_line_1"
                app:layout_constraintTop_toTopOf="@id/view_line_1" />

            <TextView
                android:id="@+id/book_info_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp"
                android:text="@{ViewModel.book.bookDescription}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_infoTitle_textView" />

            <View
                android:id="@+id/view_line_2"
                android:layout_width="3dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_info_textView" />

            <TextView
                android:id="@+id/book_author_infoTitle_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/author_information"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/view_line_2"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/view_line_2"
                app:layout_constraintTop_toTopOf="@id/view_line_2" />

            <TextView
                android:id="@+id/book_author_info_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp"
                android:text="@{ViewModel.book.aboutAuthor}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_author_infoTitle_textView" />

            <Button
                android:id="@+id/book_place_order_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/back_primary_button"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/place_order"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/book_author_info_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
